feat(CU00): Implementacion de Autenticacion con Sesion Volatil, Landing Page y Seguridad JWT